[package]
name = "ncli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
clap = { version = "4.4.16", features = ["derive"] }
indicatif = "0.17.7"
netstat2 = "0.9.1"
pnet = "0.34.0"
pnet_transport = "0.34.0"
reqwest = { version = "0.11.23", features = ["stream"] }
sysinfo = "0.30.5"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
url = "2.5.0"
tracing = "0.1.40"
tower = "0.4.13"
hyper = { version = "1.2.0", features = ["full"] }
futures = "0.3.30"
